--- a/app/assets/stylesheets/components/_profile.scss
+++ b/app/assets/stylesheets/components/_profile.scss
@@ -1,6 +1,6 @@
 .container-profile {
   background-image: url("https://w0.peakpx.com/wallpaper/515/792/HD-wallpaper-stadium-stands-seats-sports-black-and-white.jpg");
-  height: 500px;
+  height: 100%;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
